# analog-pilot

./: .env.example  .gitignore  ACADEMIC_USE.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00_总览与导航.md  01_服务器部署指南.md  02_常见问题与排错.md  03_CSMC05_PDK备忘.md  04_后仿真流程指南.md  05_仿真与验证方法学.md  06_协作与迭代约定.md
docs/templates/: cadence_env.csh.example  cdsinit_autoload.il
examples/: 01_connect_smoke_test.py  README.md
examples/full_flow_demo/: README.md  full_flow_demo.py
skills/apilot/: SKILL.md
skills/csmc-pdk/: SKILL.md
skills/postlayout-verify/: SKILL.md
src/apilot/: __init__.py  cli.py  config.py  layout.py  skill.py  spectre.py  ssh.py
src/apilot/resources/: skill_bridge.il  skill_daemon.py
tools/: grab_vnc_screenshot.sh
tools/postlayout-verify/: README.md  bgr_verify.py  opa_verify.py  run_bgr_verify.sh  run_opa_verify.sh
tools/postlayout-verify/configs/: bgr.example.json  opa.example.json
